# django-mariadb-vector-demo

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
docs/: README.md
src/articles/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
src/articles/fixtures/: 0001_article.json
src/articles/migrations/: 0001_initial.py
src/articles/templates/article/: base.html  list.html  similar.html
src/config/: asgi.py  settings.py  urls.py  wsgi.py
