[project]
name = "django-mariadb-vector-demo"
version = "0.1.0"
description = "Demo project for module 'django-mariadb-vector'"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-mariadb-vector>=0.1.2",
    "mysqlclient>=2.2.8",
    "python-dotenv>=1.2.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

